# YA_MCPServer_Yolo

./: .gitignore  README.md  User_Interface.ipynb  config.yaml  pyproject.toml  setup.py
core/: inference.py  utils.py
notebooks/.ipynb_checkpoints/: User_Interface-checkpoint.ipynb
prompts/: hello_prompt.py
resources/: hello_resource.py
tools/: hello_tool.py
