[project]
name = "YA_MCPServer_Yolo"
version = "0.1.0"
description = "A YOLO-based Object Detection MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "art>=6.5",
    "black>=25.9.0",
    "colorlog>=6.10.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.14.0",
    "pyyaml>=6.0.2",
    "ruff>=0.14.4",

    
    # yolo
    "torch",
    "torchvision",
    "opencv-python",
    "ultralytics",
    "numpy>=1.23.5",
    "pillow>=10.3.0",
    "psutil",
    "scipy>=1.4.1",
    "thop>=0.1.1",
    "tqdm>=4.66.3",

    # 可视化
    "pandas",
    "requests",
    "seaborn",
    "matplotlib",

    # 类型提示
    "types-pyyaml",
    "types-requests",
    
    # 额外工具
    "gitpython>=3.1.30", 
    "packaging", 
    "setuptools>=70.0.0", 
    "urllib3>=2.6.0 ; python_version > '3.8'"
]
